jlamontSC-test/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Preferred_Address_Change_Date__c</fullName>
        <description>Date the account&apos;s preferred billing address was made non-preferred</description>
        <label>Preferred Address Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_First_Name__c</fullName>
        <formula>rC_Bios__Preferred_Contact__r.FirstName</formula>
        <label>Preferred Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Last_Name__c</fullName>
        <formula>rC_Bios__Preferred_Contact__r.LastName</formula>
        <label>Preferred Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Email__c</fullName>
        <description>Email for Major Donors that is very private and should only be seen by the Major Donor team.</description>
        <formula>rC_Bios__Preferred_Contact__r.Private_Email__c</formula>
        <inlineHelpText>To be used/viewed only by the Major Donor team</inlineHelpText>
        <label>Private Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner_Status__c</fullName>
        <label>Strategic Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Prospect</fullName>
                </value>
                <value>
                    <fullName>1-Regular Communication</fullName>
                </value>
                <value>
                    <fullName>2-Mutual Support</fullName>
                </value>
                <value>
                    <fullName>3-Joint Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summit_Circle_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kept in sync with Summit Circle Disqualified preference.</description>
        <label>Summit Circle Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summit Circle Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_Member_Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kept in sync with Summit Circle Member Do Not Contact preference.</description>
        <label>Summit Circle Member Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account giving 5 figures or more in a single year  (not including membership and sometimes chapter donations). This preference is specific to Salesforce.
Summit Circle Member: SUMCIRCLE
Old Summit Circle Donor preference.</description>
        <inlineHelpText>An account giving 5 figures or more in a single year  (not including membership and sometimes chapter donations). This preference is specific to Salesforce.</inlineHelpText>
        <label>Summit Circle Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_No_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summit Circle No Email: SUMNOE</description>
        <label>Summit Circle No Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account which potentially could give 5 figures or more in a single year  (not including membership). This preference is specific to Salesforce.

Sync&apos;s with ther SUMPROSP Preference Code</description>
        <inlineHelpText>An account which potentially could give 5 figures or more in a single year  (not including membership). This preference is specific to Salesforce.</inlineHelpText>
        <label>Summit Circle Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summit_Circle_Solicited_by_GO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kept in sync with Summit Circle Solicited by GO Preference</description>
        <label>Summit Circle Solicited by GO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Donation_Amount__c</fullName>
        <label>Total Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donation_Count__c</fullName>
        <label>Total Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2012__c</fullName>
        <label>Total Donations 2012</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2013__c</fullName>
        <label>Total Donations 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2014__c</fullName>
        <label>Total Donations 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Giving__c</fullName>
        <label>Total Giving</label>
        <summarizedField>Opportunity.rC_Giving__Giving_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Membership_Amount__c</fullName>
        <label>Total Membership Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transmit_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Transmit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Two_Line_Address__c</fullName>
        <description>This field is being used for a data correction.  It will be deleted after use.</description>
        <label>Two Line Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPS_Zip_Matches_BillingZip__c</fullName>
        <description>Comparing the USPS Zip to the Billing Postal Code / Zip</description>
        <formula>kwzd__USPS_Zip__c ==  BillingPostalCode</formula>
        <label>USPS Zip Matches BillingZip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpHouse__c</fullName>
        <label>State Upper</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Bills_URL__c</fullName>
        <label>Bills URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Bills__c</fullName>
        <formula>HYPERLINK(  kw__Bills_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv6&quot;, &quot;Bills&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bills and Legislation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Briefing_URL__c</fullName>
        <label>Briefing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Briefing__c</fullName>
        <formula>HYPERLINK(  kw__Briefing_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv7&quot;, &quot;Briefing&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Building__c</fullName>
        <label>Building</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Candidates_URL__c</fullName>
        <label>Candidates URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Candidates__c</fullName>
        <formula>HYPERLINK(  kw__Candidates_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000001hcdI&quot;, &quot;Candidates&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidates and Elects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Caucus_Description__c</fullName>
        <label>Caucus Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Caucus_Membership_Joint__c</fullName>
        <label>Joint Caucus Memberships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Caucus_Membership__c</fullName>
        <label>Caucus Memberships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Chamber__c</fullName>
        <label>Chamber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Senate</fullName>
                </value>
                <value>
                    <fullName>US House</fullName>
                </value>
                <value>
                    <fullName>US Joint</fullName>
                </value>
                <value>
                    <fullName>State Senate</fullName>
                </value>
                <value>
                    <fullName>State House</fullName>
                </value>
                <value>
                    <fullName>State Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Committee_Jurisdiction__c</fullName>
        <label>Committee Jurisdiction</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Committee_Membership__c</fullName>
        <label>Committee Assignments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
                <value>
                    <fullName>SHELP</fullName>
                </value>
                <value>
                    <fullName>HEDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__CountyOfCoverage__c</fullName>
        <label>Counties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__District_Description__c</fullName>
        <label>District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__District__c</fullName>
        <label>District Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Elected__c</fullName>
        <label>Elected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Facebook__c</fullName>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Finance_URL__c</fullName>
        <label>Finance URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Finance__c</fullName>
        <formula>HYPERLINK(  kw__Finance_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000001hcdS&quot;, &quot;Finance&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Finances</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Address__c</fullName>
        <label>KnowWho Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Capitol Office</fullName>
                </value>
                <value>
                    <fullName>Fed Caucus Office</fullName>
                </value>
                <value>
                    <fullName>Fed Committee Office</fullName>
                </value>
                <value>
                    <fullName>Fed District Office</fullName>
                </value>
                <value>
                    <fullName>Fed Leadership Office</fullName>
                </value>
                <value>
                    <fullName>Fed Officer Office</fullName>
                </value>
                <value>
                    <fullName>Fed Subcommittee Office</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Agency</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Department</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Office</fullName>
                </value>
                <value>
                    <fullName>State Capitol Office</fullName>
                </value>
                <value>
                    <fullName>State Caucus Office</fullName>
                </value>
                <value>
                    <fullName>State Committee Office</fullName>
                </value>
                <value>
                    <fullName>State District Office</fullName>
                </value>
                <value>
                    <fullName>State Exec Agency</fullName>
                </value>
                <value>
                    <fullName>State Exec Department</fullName>
                </value>
                <value>
                    <fullName>State Exec Office</fullName>
                </value>
                <value>
                    <fullName>State Leadership Office</fullName>
                </value>
                <value>
                    <fullName>State Officer Office</fullName>
                </value>
                <value>
                    <fullName>State Subcommittee Office</fullName>
                </value>
                <value>
                    <fullName>Local County Office</fullName>
                </value>
                <value>
                    <fullName>Local Municipal Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Category__c</fullName>
        <label>KnowWho Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Caucus</fullName>
                </value>
                <value>
                    <fullName>Fed Committee</fullName>
                </value>
                <value>
                    <fullName>Fed Leadership</fullName>
                </value>
                <value>
                    <fullName>Fed Legislator Office</fullName>
                </value>
                <value>
                    <fullName>Fed Officer</fullName>
                </value>
                <value>
                    <fullName>Former Fed Caucus</fullName>
                </value>
                <value>
                    <fullName>Former Fed Committee</fullName>
                </value>
                <value>
                    <fullName>Former Fed Leadership</fullName>
                </value>
                <value>
                    <fullName>Former Fed Legislator</fullName>
                </value>
                <value>
                    <fullName>Former Fed Officer</fullName>
                </value>
                <value>
                    <fullName>Former Fed Staffer</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Agency</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Department</fullName>
                </value>
                <value>
                    <fullName>Fed Exec Office</fullName>
                </value>
                <value>
                    <fullName>Former Fed Exec Agency</fullName>
                </value>
                <value>
                    <fullName>Former Fed Exec Department</fullName>
                </value>
                <value>
                    <fullName>Former Fed Exec Office</fullName>
                </value>
                <value>
                    <fullName>Former State Caucus</fullName>
                </value>
                <value>
                    <fullName>Former State Committee</fullName>
                </value>
                <value>
                    <fullName>Former State Exec Agency</fullName>
                </value>
                <value>
                    <fullName>Former State Exec Department</fullName>
                </value>
                <value>
                    <fullName>Former State Exec Office</fullName>
                </value>
                <value>
                    <fullName>Former State Leadership</fullName>
                </value>
                <value>
                    <fullName>Former State Legislator</fullName>
                </value>
                <value>
                    <fullName>Former State Officer</fullName>
                </value>
                <value>
                    <fullName>Former State Staffer</fullName>
                </value>
                <value>
                    <fullName>State Caucus</fullName>
                </value>
                <value>
                    <fullName>State Committee</fullName>
                </value>
                <value>
                    <fullName>State Exec Agency</fullName>
                </value>
                <value>
                    <fullName>State Exec Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Directory__c</fullName>
        <label>KnowWho Directory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CongressForce</fullName>
                </value>
                <value>
                    <fullName>FedExecForce</fullName>
                </value>
                <value>
                    <fullName>GovAffairsForce</fullName>
                </value>
                <value>
                    <fullName>LocalForce</fullName>
                </value>
                <value>
                    <fullName>MediaForce</fullName>
                </value>
                <value>
                    <fullName>StateForce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Edit_Link_Formula__c</fullName>
        <formula>kw__KW_Edit_Link__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)</formula>
        <label>KW Edit Link Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Edit_Link__c</fullName>
        <label>KW Edit Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Template__c</fullName>
        <label>KnowWho Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccountCaucus</fullName>
                </value>
                <value>
                    <fullName>AccountCaucusFormer</fullName>
                </value>
                <value>
                    <fullName>AccountCommittee</fullName>
                </value>
                <value>
                    <fullName>AccountCommitteeFormer</fullName>
                </value>
                <value>
                    <fullName>AccountFormer</fullName>
                </value>
                <value>
                    <fullName>AccountMember</fullName>
                </value>
                <value>
                    <fullName>AccountMemberFormer</fullName>
                </value>
                <value>
                    <fullName>AccountOfficer</fullName>
                </value>
                <value>
                    <fullName>AccountOfficerFormer</fullName>
                </value>
                <value>
                    <fullName>AccountExecutive</fullName>
                </value>
                <value>
                    <fullName>AccountExecutiveFormer</fullName>
                </value>
                <value>
                    <fullName>AccountStateCaucus</fullName>
                </value>
                <value>
                    <fullName>AccountStateCaucusFormer</fullName>
                </value>
                <value>
                    <fullName>AccountStateCommittee</fullName>
                </value>
                <value>
                    <fullName>AccountStateCommitteeFormer</fullName>
                </value>
                <value>
                    <fullName>AccountStateExecutive</fullName>
                </value>
                <value>
                    <fullName>AccountStateExecutiveFormer</fullName>
                </value>
                <value>
                    <fullName>AccountStateMember</fullName>
                </value>
                <value>
                    <fullName>AccountStateMemberFormer</fullName>
                </value>
                <value>
                    <fullName>AccountStateOfficer</fullName>
                </value>
                <value>
                    <fullName>AccountStateOfficerFormer</fullName>
                </value>
                <value>
                    <fullName>AccountLocalCountyFormer</fullName>
                </value>
                <value>
                    <fullName>AccountLocalCountyUltimate</fullName>
                </value>
                <value>
                    <fullName>AccountLocalMunicipalFormer</fullName>
                </value>
                <value>
                    <fullName>AccountLocalMunicipalUltimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Updated__c</fullName>
        <label>KnowWho Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kw__KnowWhoId__c</fullName>
        <externalId>true</externalId>
        <label>KnowWho Record ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Leadership_Positions__c</fullName>
        <label>Leadership Positions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Leadership_and_Officer_Description__c</fullName>
        <label>Leadership and Officer Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Links_to_Maps__c</fullName>
        <formula>HYPERLINK(  kw__Map_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lhg&quot;, &quot;Maps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interactive Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_1__c</fullName>
        <label>Mailing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_3__c</fullName>
        <label>Mailing Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_Display__c</fullName>
        <formula>IF(len(kw__Mailing_Address_1__c)&gt;0, kw__Mailing_Address_1__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_2__c)&gt;0, kw__Mailing_Address_2__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_3__c)&gt;0, kw__Mailing_Address_3__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_4__c)&gt;0, kw__Mailing_Address_4__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_5__c)&gt;0, kw__Mailing_Address_5__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_6__c)&gt;0, kw__Mailing_Address_6__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_7__c)&gt;0, kw__Mailing_Address_7__c &amp;  BR(), &quot;&quot;) &amp;
 IF(len(kw__Mailing_Address_8__c)&gt;0, kw__Mailing_Address_8__c &amp;  BR(), &quot;&quot;)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Map_URL__c</fullName>
        <label>Map URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__MunicipalityOfCoverage__c</fullName>
        <label>Municipality Of Coverage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__News_URL__c</fullName>
        <label>News URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__News__c</fullName>
        <formula>HYPERLINK(  kw__News_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv5&quot;, &quot;News&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current News</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Next_Election__c</fullName>
        <label>Next Election</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Office_Code__c</fullName>
        <label>KnowWho Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Political_Party__c</fullName>
        <label>Political Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Democratic Party</fullName>
                </value>
                <value>
                    <fullName>Republican Party</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Primary_Address__c</fullName>
        <formula>IF (LEN(kw__Building__c )&gt; 0, kw__Building__c &amp; BR(),&quot;&quot;) &amp; 
IF (LEN( kw__Room__c )&gt; 0, kw__Room__c &amp; BR(),&quot;&quot;) &amp; 
IF (LEN( kw__Street_1__c  )&gt; 0, kw__Street_1__c&amp; BR(),&quot;&quot;) &amp; 
IF (LEN(kw__Street_2__c)&gt; 0, kw__Street_2__c &amp; BR(),&quot;&quot;) &amp; 
kw__City__c  &amp; &quot;, &quot; &amp; kw__State__c  &amp; &quot; &quot; &amp; kw__Zip_Code__c</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Reelect_Status__c</fullName>
        <label>Reelection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This legislator may run for reelection</fullName>
                </value>
                <value>
                    <fullName>This legislator is running for a different office</fullName>
                </value>
                <value>
                    <fullName>This legislator is retiring at the end of this term</fullName>
                </value>
                <value>
                    <fullName>Reelection status for this legislator is not available</fullName>
                </value>
                <value>
                    <fullName>This executive may run for reelection</fullName>
                </value>
                <value>
                    <fullName>This executive is running for a different office</fullName>
                </value>
                <value>
                    <fullName>This executive is retiring at the end of this term</fullName>
                </value>
                <value>
                    <fullName>This executive has reached their term limit</fullName>
                </value>
                <value>
                    <fullName>Reelection status for this executive is not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Research_URL__c</fullName>
        <label>Research URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Research__c</fullName>
        <formula>HYPERLINK(  kw__Research_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv8&quot;, &quot;Research&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Research Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Room__c</fullName>
        <label>Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Seniority__c</fullName>
        <label>Seniority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__StateOfCoverage__c</fullName>
        <label>State Of Representation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK - Alaska</fullName>
                </value>
                <value>
                    <fullName>AL - Alabama</fullName>
                </value>
                <value>
                    <fullName>AR - Arkansas</fullName>
                </value>
                <value>
                    <fullName>AS - American Samoa</fullName>
                </value>
                <value>
                    <fullName>AZ - Arizona</fullName>
                </value>
                <value>
                    <fullName>CA - California</fullName>
                </value>
                <value>
                    <fullName>CO - Colorado</fullName>
                </value>
                <value>
                    <fullName>CT - Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC - District of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE - Delaware</fullName>
                </value>
                <value>
                    <fullName>FL - Florida</fullName>
                </value>
                <value>
                    <fullName>GA - Georgia</fullName>
                </value>
                <value>
                    <fullName>GU - Guam</fullName>
                </value>
                <value>
                    <fullName>HI - Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA - Iowa</fullName>
                </value>
                <value>
                    <fullName>ID - Idaho</fullName>
                </value>
                <value>
                    <fullName>IL - Illinois</fullName>
                </value>
                <value>
                    <fullName>IN - Indiana</fullName>
                </value>
                <value>
                    <fullName>KS - Kansas</fullName>
                </value>
                <value>
                    <fullName>KY - Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA - Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA - Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MD - Maryland</fullName>
                </value>
                <value>
                    <fullName>ME - Maine</fullName>
                </value>
                <value>
                    <fullName>MI - Michigan</fullName>
                </value>
                <value>
                    <fullName>MN - Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO - Missouri</fullName>
                </value>
                <value>
                    <fullName>MP - Mariana Islands</fullName>
                </value>
                <value>
                    <fullName>MS - Mississippi</fullName>
                </value>
                <value>
                    <fullName>MT - Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Street_1__c</fullName>
        <label>Street 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
</CustomObject>